src/style/index.scss
@import '~normalize.css';
@import '~prismjs/themes/prism.css';

//
// variable
// -----------------------------------------

$fontSize: 15px;

$titleFontFamily: tofinoThin, "Alegreya Sans SC";
$fontFamily: tofinoThin, "Raleway", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", Arial, sans-serif;
$monospaceFontFamily: "PT Mono", Consolas, Monaco, Menlo, monospace;

$primaryColor: #5eccb6;
$bgColor: rgb(250,250,250);
$textColor: #555;
$linkColor: darken($primaryColor, 20);
$metaColor: #888;
$codeBgColor: #f1f1f1;

//
// common
// -----------------------------------------

::-moz-selection,
::selection {
  background: #B2D7FF;
}

body {
  // font
  font-family: $fontFamily;
  font-size: $fontSize;
  line-height: 2;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: none;
  // size
  position: relative;
  max-width: 700px;
  margin: 0 auto;
  padding: 0;
  background: $bgColor;
  color: $textColor;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 400;
}

.post-title {
  border-bottom: 1px rgba(120,120,120,0.2) solid;
  padding-bottom: 10px;
}

.title {
  cursor: default;
  font-size: 50px;
  font-family: $titleFontFamily, $fontFamily;
  max-width: 100%;
}

.search-bar {
  text-align: center;
  border:none;
  background-color: $bgColor;
  transition: background-color 0.4s;
}

.search-bar:hover, .search-bar:focus, .search-bar:active {
  outline: none;
  background-color: darken($bgColor, 2);
  text-decoration: none;
}

a {
  text-decoration: none;
  color: $linkColor;
  overflow-wrap: break-word;
  word-break: break-all;
  &:hover {
    color: $primaryColor;
  }
}

.header {
  margin: 50px auto;
  text-align: center;
  a {
    font-size: $fontSize + 2;
    letter-spacing: 5px;
    text-transform: uppercase;
    transition: color 0.5s;
    // color: $textColor;
  }
}

.btn {
  cursor: default;
  display: inline-block;
  border: 0;
  line-height: 24px;
  padding: 0.6em 1em;
  margin: 0.5em;
  margin-bottom: 1em;
  outline: none;
  text-decoration: none;
  color: #666;
  transition: background-color 0.2s;

  span {
    margin-left: 7px;
    margin-right: 25px;
  }

  &:hover, &:active, &:focus {
    background-color: darken($bgColor,1);
    .arrow {
      background-color: darken($bgColor,1);
    }
  }
}

/* do not group these rules */
.title::-webkit-input-placeholder {
    color: $textColor;
}
.title:-moz-placeholder {
    /* FF 4-18 */
    color: $textColor;
}
.title::-moz-placeholder {
    /* FF 19+ */
    color: $textColor;
}
.title:-ms-input-placeholder {
    /* IE 10+ */
    color: $textColor;
}

//
// List View
// -----------------------------------------

.list-view {
  margin: 0 20px;
  ol,
  ul {
    padding: 0;
    list-style: none;
  }
}

.list-item {
  min-height: 160px;
  max-height: 160px;

  margin: 0 auto;
  width: 75%;
  background-color: white;
  text-align: center;
  // border: 1px 1px 0px 0px $primaryColor solid;
  // padding: 20px;
  // padding-bottom: 20px;
  position: relative;
  margin-bottom: 40px;
  box-shadow: 0px 0px 2px 2px rgba(150,150,150,0.1);
  transition: 0.2s;
  cursor: pointer;
  &:hover {
    box-shadow: 0px 0px 2px 2px rgba(100,100,100,0.15);
    .item-title {
      color: $linkColor;
    }
    .item-property {
      max-height: 0px;
      transition: max-height 0.1s ease-out;

    }
    .item-summary {
      overflow: hidden;
      max-height: 80px;
      transition: max-height 0.1s ease-in;
    }
  }
}

.item-property {
  overflow: hidden;
  transition: max-height 0.1s ease-in;
  max-height: 40px;
  margin: 0 5px;
  text-align: left;
  // border-bottom: 1px solid $primaryColor;
  .item-property__tag {
    font-size: 85%;
    display: inline-block;
    margin-right: 7px;
    &:before{
      content:  '•';
      color: darken($primaryColor, 20);
    }
  }
  .item-property__date {
    float: right;
    text-align: right;
    display: inline-block;
    font-size: $fontSize - 2;
    color: $metaColor;
    // border-left: 1px dotted $primaryColor;
    padding-top: 2px;
    cursor:default;
  }
}

.item-title {
  display: inline-block;
  margin-top: 15px;
  margin-bottom: 10px;
  font-size: $fontSize + 6;
  color: $textColor;
  &:hover {
    color: $linkColor;
  }
}

.item-summary {
  text-align: left;
  max-height: 0;
  padding:0 10px;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

//
// Post View
// -----------------------------------------

.post-view {
  margin: 0 40px 50px;
}

.post-title {
  line-height: 1;
  margin-bottom: 50px;
}

// when smaller than tablet
@media (max-width: 767px) {
  .post-title {
    font-size: 1.5em;
  }
}

.post-date {
  float: right;
  font-size: $fontSize - 2;
  font-weight: 400;
  line-height: 2;
  color: $metaColor;
}

pre {
  background: $codeBgColor !important;
  padding: 16px;
  overflow-x: auto;
  white-space: pre;
}

code {
  background: $codeBgColor;
  font-family: $monospaceFontFamily !important;
  padding: 3px 5px;
  border-radius: 4px;
}

blockquote {
  margin: 0;
  padding: 0 16px;
  border-left: 4px solid #ddd;
}

//
// CSS Icons
// -----------------------------------------

.icon {
  display: inline-block;
}

// arrow-left
.arrow-left.icon {
  color: #000;
  position: absolute;
  margin-left: 3px;
  margin-top: 10px;
  width: 16px;
  height: 1px;
  background-color: darken($primaryColor, 20);
}

.arrow-left.icon:before {
  content: '';
  position: absolute;
  left: 1px;
  top: -5px;
  width: 10px;
  height: 10px;
  border-top: solid 1px darken($primaryColor, 20);
  border-right: solid 1px darken($primaryColor, 20);
  -webkit-transform: rotate(-135deg);
          transform: rotate(-135deg);
}


// arrow-right
.arrow-right.icon {
  color: #000;
  position: absolute;
  margin-left: 2px;
  margin-top: 10px;
  width: 16px;
  height: 1px;
  background-color: darken($primaryColor, 20);
}

.arrow-right.icon:before {
  content: '';
  position: absolute;
  right: 1px;
  top: -5px;
  width: 10px;
  height: 10px;
  border-top: solid 1px darken($primaryColor, 20);
  border-right: solid 1px darken($primaryColor, 20);
  -webkit-transform: rotate(45deg);
          transform: rotate(45deg);
}

//
// Transition animation
//
// -----------------------------------------
.fade-enter-active, .fade-leave-active {
  transition: 0.1s
}
.fade-enter, .fade-leave-active {
  opacity: 0;
  height: 0%;
}

.flip-list-move {
  transition: transform 1s;
}

